--- a/capIncome2.html
+++ b/capIncome2.html
@@ -3,28 +3,41 @@
 <html>
 
 <head>
+<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+
 <style>
 body{
 	background-color:white;
+    font-family:"Nunito";
 }
 @media only screen and (max-width:500px){
 table.GeneratedTable td,table.GeneratedTable th {
-font-size:9.5vw;
+font-size:9vw;
 border-width: 2px;
-padding: 3px;
+}
+.input,.value{
+padding-bottom:40px;
+}
+.value{
+padding-left:25px;
 }}
 
 @media only screen and (min-width:500px){
 table.GeneratedTable td,table.GeneratedTable th {
 font-size:40px;
 border-width: 2px;
-padding: 3px;
+}
+.input,.value{
+padding-bottom:40px;
+}
+.value{
+padding-left:50px;
 }}
+
 
 table.GeneratedTable {
   width: 100%;
   max-width:1000px;
-  border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
 }
@@ -43,7 +56,7 @@ font-weight:bold;
 }
 .slider{
 width:100%;
-}
+} 
 </style>
 </head>
 
@@ -59,21 +72,21 @@ width:100%;
       <td class = "label" colspan="2">Amount protected</td> 
     </tr>
     <tr>
-      <td class = "input"><input type="range" min="100000" max="5000000" step="50000" value="250000" class="slider" id="amount-protected-slider"></td>
+      <td class="input"><input type="range" min="100000" max="5000000" step="50000" value="250000" class="slider" id="amount-protected-slider"></td>
       <td class = "value" id="amount-protected-input-display">£250000</td>  
     </tr>
    <tr>
       <td class = "label" colspan="2">Cap rate</td> 
     </tr>
     <tr>
-      <td class = "input"><input type="range" min="0" max="1000" value="100" step="5" class="slider" id="cap-rate-slider"></td>
+      <td class="input"><input type="range" min="0" max="1000" value="100" step="5" class="slider" id="cap-rate-slider"></td>
       <td class = "value" id="cap-rate-input-display">1%</td>  
     </tr> 
     <tr>
       <td class = "label" colspan="2">Benchmark interest rate</td> 
     </tr>
     <tr>
-      <td class = "input"><input type="range" min="0" max="1000" value="100" step="5" class="slider" id="benchmark-interest-rate-slider"></td>
+      <td class="input"><input type="range" min="0" max="1000" value="100" step="5" class="slider" id="benchmark-interest-rate-slider"></td>
       <td class = "value" id="benchmark-interest-rate-input-display">1%</td>  
     </tr>
     <tr>
