--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -301,7 +301,8 @@ data.addRows([
 [new Date(2022,2,9,0,0,0),556.33],
 [new Date(2022,2,10,0,0,0),575.95],
 [new Date(2022,2,11,0,0,0),572.23],
-[new Date(2022,2,11,0,0,0),572.23]
+[new Date(2022,2,12,0,0,0),586.8],
+[new Date(2022,2,12,0,0,0),586.8]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -354,8 +355,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>586.6</td>
-<td class = "leftTextAlign">12 March 2022</td>
+<td>586.8</td>
+<td class = "leftTextAlign">13 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
