--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -302,7 +302,8 @@ data.addRows([
 [new Date(2022,2,10,0,0,0),575.95],
 [new Date(2022,2,11,0,0,0),572.23],
 [new Date(2022,2,12,0,0,0),586.8],
-[new Date(2022,2,12,0,0,0),586.8]
+[new Date(2022,2,13,0,0,0),586.75],
+[new Date(2022,2,13,0,0,0),586.75]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -355,8 +356,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>586.9</td>
-<td class = "leftTextAlign">13 March 2022</td>
+<td>588</td>
+<td class = "leftTextAlign">14 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
