--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -64,7 +64,8 @@ data.addRows([
 [new Date(2022,2,14,6,0,0),588.18],
 [new Date(2022,2,14,7,0,0),593.3],
 [new Date(2022,2,14,7,15,0),593.65],
-[new Date(2022,2,14,7,15,0),593.65]
+[new Date(2022,2,14,7,30,0),601.82],
+[new Date(2022,2,14,7,30,0),601.82]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -117,13 +118,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>601.8</td>
-<td class = "leftTextAlign">14 March 2022 07:30</td>
+<td>603.2</td>
+<td class = "leftTextAlign">14 March 2022 07:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>601.8</td>
-<td class = "leftTextAlign">14 March 2022 07:30</td>
+<td>603.2</td>
+<td class = "leftTextAlign">14 March 2022 07:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
