--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -65,7 +65,8 @@ data.addRows([
 [new Date(2022,2,14,7,15,0),593.65],
 [new Date(2022,2,14,7,30,0),601.82],
 [new Date(2022,2,14,7,45,0),603.23],
-[new Date(2022,2,14,7,45,0),603.23]
+[new Date(2022,2,14,8,0,0),607.37],
+[new Date(2022,2,14,8,0,0),607.37]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -118,13 +119,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>607.4</td>
-<td class = "leftTextAlign">14 March 2022 08:00</td>
+<td>614</td>
+<td class = "leftTextAlign">14 March 2022 08:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>607.4</td>
-<td class = "leftTextAlign">14 March 2022 08:00</td>
+<td>614</td>
+<td class = "leftTextAlign">14 March 2022 08:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
