--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -66,7 +66,8 @@ data.addRows([
 [new Date(2022,2,14,7,30,0),601.82],
 [new Date(2022,2,14,7,45,0),603.23],
 [new Date(2022,2,14,8,0,0),607.37],
-[new Date(2022,2,14,8,0,0),607.37]
+[new Date(2022,2,14,8,15,0),613.96],
+[new Date(2022,2,14,8,15,0),613.96]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -119,8 +120,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>614</td>
-<td class = "leftTextAlign">14 March 2022 08:15</td>
+<td>606.5</td>
+<td class = "leftTextAlign">14 March 2022 08:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
