--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -68,7 +68,8 @@ data.addRows([
 [new Date(2022,2,14,8,15,0),613.96],
 [new Date(2022,2,14,8,30,0),606.47],
 [new Date(2022,2,14,8,45,0),604.32],
-[new Date(2022,2,14,8,45,0),604.32]
+[new Date(2022,2,14,9,0,0),608.23],
+[new Date(2022,2,14,9,0,0),608.23]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -121,8 +122,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>608.2</td>
-<td class = "leftTextAlign">14 March 2022 09:00</td>
+<td>611.9</td>
+<td class = "leftTextAlign">14 March 2022 09:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
