--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -69,7 +69,8 @@ data.addRows([
 [new Date(2022,2,14,8,30,0),606.47],
 [new Date(2022,2,14,8,45,0),604.32],
 [new Date(2022,2,14,9,0,0),608.23],
-[new Date(2022,2,14,9,0,0),608.23]
+[new Date(2022,2,14,9,15,0),611.93],
+[new Date(2022,2,14,9,15,0),611.93]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -122,8 +123,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>611.9</td>
-<td class = "leftTextAlign">14 March 2022 09:15</td>
+<td>613.5</td>
+<td class = "leftTextAlign">14 March 2022 09:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
