--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -70,7 +70,8 @@ data.addRows([
 [new Date(2022,2,14,8,45,0),604.32],
 [new Date(2022,2,14,9,0,0),608.23],
 [new Date(2022,2,14,9,15,0),611.93],
-[new Date(2022,2,14,9,15,0),611.93]
+[new Date(2022,2,14,9,30,0),613.54],
+[new Date(2022,2,14,9,30,0),613.54]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -123,13 +124,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>613.5</td>
-<td class = "leftTextAlign">14 March 2022 09:30</td>
+<td>615.3</td>
+<td class = "leftTextAlign">14 March 2022 09:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>614</td>
-<td class = "leftTextAlign">14 March 2022 08:15</td>
+<td>615.3</td>
+<td class = "leftTextAlign">14 March 2022 09:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
