--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -71,7 +71,8 @@ data.addRows([
 [new Date(2022,2,14,9,15,0),611.93],
 [new Date(2022,2,14,9,30,0),613.54],
 [new Date(2022,2,14,9,45,0),615.3],
-[new Date(2022,2,14,9,45,0),615.3]
+[new Date(2022,2,14,10,0,0),617.46],
+[new Date(2022,2,14,10,0,0),617.46]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -124,8 +125,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>617.5</td>
-<td class = "leftTextAlign">14 March 2022 10:00</td>
+<td>615.8</td>
+<td class = "leftTextAlign">14 March 2022 10:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
