--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -73,7 +73,8 @@ data.addRows([
 [new Date(2022,2,14,9,45,0),615.3],
 [new Date(2022,2,14,10,0,0),617.46],
 [new Date(2022,2,14,10,15,0),615.83],
-[new Date(2022,2,14,10,15,0),615.83]
+[new Date(2022,2,14,10,30,0),616.59],
+[new Date(2022,2,14,10,30,0),616.59]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -126,8 +127,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>616.6</td>
-<td class = "leftTextAlign">14 March 2022 10:30</td>
+<td>614.2</td>
+<td class = "leftTextAlign">14 March 2022 10:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
