--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -74,7 +74,8 @@ data.addRows([
 [new Date(2022,2,14,10,15,0),615.83],
 [new Date(2022,2,14,10,30,0),616.59],
 [new Date(2022,2,14,10,45,0),614.2],
-[new Date(2022,2,14,10,45,0),614.2]
+[new Date(2022,2,14,11,0,0),616.25],
+[new Date(2022,2,14,11,0,0),616.25]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -127,8 +128,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>616.3</td>
-<td class = "leftTextAlign">14 March 2022 11:00</td>
+<td>617.4</td>
+<td class = "leftTextAlign">14 March 2022 11:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
