--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -76,7 +76,8 @@ data.addRows([
 [new Date(2022,2,14,10,45,0),614.2],
 [new Date(2022,2,14,11,0,0),616.25],
 [new Date(2022,2,14,11,15,0),617.41],
-[new Date(2022,2,14,11,15,0),617.41]
+[new Date(2022,2,14,11,30,0),611.37],
+[new Date(2022,2,14,11,30,0),611.37]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -129,8 +130,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>611.4</td>
-<td class = "leftTextAlign">14 March 2022 11:30</td>
+<td>612.6</td>
+<td class = "leftTextAlign">14 March 2022 11:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
