--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -77,7 +77,8 @@ data.addRows([
 [new Date(2022,2,14,11,15,0),617.41],
 [new Date(2022,2,14,11,30,0),611.37],
 [new Date(2022,2,14,11,45,0),612.57],
-[new Date(2022,2,14,11,45,0),612.57]
+[new Date(2022,2,14,12,0,0),610.5],
+[new Date(2022,2,14,12,0,0),610.5]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -130,8 +131,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>610.5</td>
-<td class = "leftTextAlign">14 March 2022 12:00</td>
+<td>610.6</td>
+<td class = "leftTextAlign">14 March 2022 12:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
