--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -78,7 +78,8 @@ data.addRows([
 [new Date(2022,2,14,11,30,0),611.37],
 [new Date(2022,2,14,11,45,0),612.57],
 [new Date(2022,2,14,12,0,0),610.5],
-[new Date(2022,2,14,12,0,0),610.5]
+[new Date(2022,2,14,12,15,0),610.58],
+[new Date(2022,2,14,12,15,0),610.58]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -131,8 +132,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>610.6</td>
-<td class = "leftTextAlign">14 March 2022 12:15</td>
+<td>612.6</td>
+<td class = "leftTextAlign">14 March 2022 12:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
