--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -79,7 +79,8 @@ data.addRows([
 [new Date(2022,2,14,11,45,0),612.57],
 [new Date(2022,2,14,12,0,0),610.5],
 [new Date(2022,2,14,12,15,0),610.58],
-[new Date(2022,2,14,12,15,0),610.58]
+[new Date(2022,2,14,12,30,0),612.61],
+[new Date(2022,2,14,12,30,0),612.61]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -132,8 +133,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>612.6</td>
-<td class = "leftTextAlign">14 March 2022 12:30</td>
+<td>611.5</td>
+<td class = "leftTextAlign">14 March 2022 12:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
