--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -80,7 +80,8 @@ data.addRows([
 [new Date(2022,2,14,12,15,0),610.58],
 [new Date(2022,2,14,12,30,0),612.61],
 [new Date(2022,2,14,12,45,0),611.49],
-[new Date(2022,2,14,12,45,0),611.49]
+[new Date(2022,2,14,13,0,0),609.24],
+[new Date(2022,2,14,13,0,0),609.24]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -133,8 +134,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>609.2</td>
-<td class = "leftTextAlign">14 March 2022 13:00</td>
+<td>612.1</td>
+<td class = "leftTextAlign">14 March 2022 13:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
