--- a/capIncome.html
+++ b/capIncome.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html>
 
@@ -9,9 +6,10 @@
 
 <style>
 body{
-	background-color:white;
+	background-color:#0173a3;
     font-family:"Nunito";
 }
+
 @media only screen and (max-width:500px){
 table.GeneratedTable td,table.GeneratedTable th {
 font-size:18px;
@@ -39,9 +37,14 @@ padding-left:50px;
 
 table.GeneratedTable {
   width: 100%;
-  max-width:1000px;
+  max-width:750px;
   margin-left: auto;
   margin-right: auto;
+  background-color:white;
+  padding-top:20px;
+  padding-bottom:20px;
+  padding-left:5vw;
+  padding-right:5vw;
 }
 
 table.GeneratedTable thead {
