--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -84,7 +84,8 @@ data.addRows([
 [new Date(2022,2,14,13,30,0),612.39],
 [new Date(2022,2,14,13,45,0),611.65],
 [new Date(2022,2,14,14,0,0),612.83],
-[new Date(2022,2,14,14,0,0),612.83]
+[new Date(2022,2,14,14,15,0),613.08],
+[new Date(2022,2,14,14,15,0),613.08]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -137,8 +138,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>613.1</td>
-<td class = "leftTextAlign">14 March 2022 14:15</td>
+<td>613</td>
+<td class = "leftTextAlign">14 March 2022 14:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
