--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -86,7 +86,8 @@ data.addRows([
 [new Date(2022,2,14,14,15,0),613.08],
 [new Date(2022,2,14,14,30,0),612.97],
 [new Date(2022,2,14,14,45,0),613.31],
-[new Date(2022,2,14,14,45,0),613.31]
+[new Date(2022,2,14,15,0,0),612.31],
+[new Date(2022,2,14,15,0,0),612.31]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -139,8 +140,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>612.3</td>
-<td class = "leftTextAlign">14 March 2022 15:00</td>
+<td>614</td>
+<td class = "leftTextAlign">14 March 2022 15:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
