--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -88,7 +88,8 @@ data.addRows([
 [new Date(2022,2,14,14,45,0),613.31],
 [new Date(2022,2,14,15,0,0),612.31],
 [new Date(2022,2,14,15,15,0),614.04],
-[new Date(2022,2,14,15,15,0),614.04]
+[new Date(2022,2,14,15,30,0),614.19],
+[new Date(2022,2,14,15,30,0),614.19]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -141,8 +142,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>614.2</td>
-<td class = "leftTextAlign">14 March 2022 15:30</td>
+<td>614.5</td>
+<td class = "leftTextAlign">14 March 2022 15:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
