--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -89,7 +89,8 @@ data.addRows([
 [new Date(2022,2,14,15,15,0),614.04],
 [new Date(2022,2,14,15,30,0),614.19],
 [new Date(2022,2,14,15,45,0),614.45],
-[new Date(2022,2,14,15,45,0),614.45]
+[new Date(2022,2,14,16,0,0),613.36],
+[new Date(2022,2,14,16,0,0),613.36]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -142,13 +143,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>613.4</td>
-<td class = "leftTextAlign">14 March 2022 16:00</td>
+<td>618.5</td>
+<td class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>617.5</td>
-<td class = "leftTextAlign">14 March 2022 10:00</td>
+<td>618.5</td>
+<td class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
