--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -90,8 +90,7 @@ data.addRows([
 [new Date(2022,2,14,15,30,0),614.19],
 [new Date(2022,2,14,15,45,0),614.45],
 [new Date(2022,2,14,16,0,0),613.36],
-[new Date(2022,2,14,16,15,0),618.48],
-[new Date(2022,2,14,16,15,0),618.48]
+[new Date(2022,2,14,16,0,0),613.36]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -144,18 +143,18 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>616</td>
-<td class = "leftTextAlign">14 March 2022 16:30</td>
+<td id="latest_index">618.5</td>
+<td id="latest-date" class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>618.5</td>
-<td class = "leftTextAlign">14 March 2022 16:15</td>
+<td id="high-index">618.5</td>
+<td id="high-date" class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td>586.7</td>
-<td class = "leftTextAlign">13 March 2022 18:00</td>
+<td id="low-index">586.7</td>
+<td id="low-date" class = "leftTextAlign">13 March 2022 18:00</td>
 </tr>
 </tbody>
 </table>
