--- a/capitIndexChart1W.html
+++ b/capitIndexChart1W.html
@@ -370,8 +370,7 @@ data.addRows([
 [new Date(2022,2,14,15,30,0),614.19],
 [new Date(2022,2,14,15,45,0),614.45],
 [new Date(2022,2,14,16,0,0),613.36],
-[new Date(2022,2,14,16,15,0),618.48],
-[new Date(2022,2,14,16,15,0),618.48]
+[new Date(2022,2,14,16,0,0),613.36]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -424,18 +423,18 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>616</td>
-<td class = "leftTextAlign">14 March 2022 16:30</td>
+<td id="latest_index">618.5</td>
+<td id="latest-date" class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>618.5</td>
-<td class = "leftTextAlign">14 March 2022 16:15</td>
+<td id="high-index">618.5</td>
+<td id="high-date" class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td>504.7</td>
-<td class = "leftTextAlign">07 March 2022 17:30</td>
+<td id="low-index">504.7</td>
+<td id="low-date" class = "leftTextAlign">07 March 2022 17:30</td>
 </tr>
 </tbody>
 </table>
