--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -90,7 +90,9 @@ data.addRows([
 [new Date(2022,2,14,15,30,0),614.19],
 [new Date(2022,2,14,15,45,0),614.45],
 [new Date(2022,2,14,16,0,0),613.36],
-[new Date(2022,2,14,16,0,0),613.36]
+[new Date(2022,2,14,16,15,0),618.48],
+[new Date(2022,2,14,16,30,0),616.03],
+[new Date(2022,2,14,16,30,0),616.03]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -143,8 +145,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest_index">618.5</td>
-<td id="latest-date" class = "leftTextAlign">14 March 2022 16:15</td>
+<td id="latest_index">612.5</td>
+<td id="latest-date" class = "leftTextAlign">14 March 2022 16:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
