--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -92,7 +92,8 @@ data.addRows([
 [new Date(2022,2,14,16,15,0),618.48],
 [new Date(2022,2,14,16,30,0),616.03],
 [new Date(2022,2,14,16,45,0),612.51],
-[new Date(2022,2,14,16,45,0),612.51]
+[new Date(2022,2,14,17,0,0),613.74],
+[new Date(2022,2,14,17,0,0),613.74]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -145,8 +146,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest_index">613.7</td>
-<td id="latest-date" class = "leftTextAlign">14 March 2022 17:00</td>
+<td id="latest_index">612.9</td>
+<td id="latest-date" class = "leftTextAlign">14 March 2022 17:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
