--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -93,7 +93,8 @@ data.addRows([
 [new Date(2022,2,14,16,30,0),616.03],
 [new Date(2022,2,14,16,45,0),612.51],
 [new Date(2022,2,14,17,0,0),613.74],
-[new Date(2022,2,14,17,0,0),613.74]
+[new Date(2022,2,14,17,15,0),612.93],
+[new Date(2022,2,14,17,15,0),612.93]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -146,8 +147,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest_index">612.9</td>
-<td id="latest-date" class = "leftTextAlign">14 March 2022 17:15</td>
+<td id="latest-index">613.3</td>
+<td id="latest-date" class = "leftTextAlign">14 March 2022 17:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
