--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -303,7 +303,8 @@ data.addRows([
 [new Date(2022,2,16,0,0,0),610.36],
 [new Date(2022,2,17,0,0,0),628.81],
 [new Date(2022,2,18,0,0,0),566.94],
-[new Date(2022,2,18,0,0,0),566.94]
+[new Date(2022,2,19,0,0,0),541.24],
+[new Date(2022,2,19,0,0,0),541.24]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -356,8 +357,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">541.2</td>
-<td id="latest-date" class = "leftTextAlign">19 March 2022</td>
+<td id="latest-index">541.4</td>
+<td id="latest-date" class = "leftTextAlign">20 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
