--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -304,7 +304,8 @@ data.addRows([
 [new Date(2022,2,17,0,0,0),628.81],
 [new Date(2022,2,18,0,0,0),566.94],
 [new Date(2022,2,19,0,0,0),541.24],
-[new Date(2022,2,19,0,0,0),541.24]
+[new Date(2022,2,20,0,0,0),541.41],
+[new Date(2022,2,20,0,0,0),541.41]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -357,8 +358,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">541.4</td>
-<td id="latest-date" class = "leftTextAlign">20 March 2022</td>
+<td id="latest-index">543.3</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
