--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -62,7 +62,8 @@ data.addRows([
 [new Date(2022,2,21,4,0,0),543.44],
 [new Date(2022,2,21,5,0,0),543.44],
 [new Date(2022,2,21,6,0,0),543.42],
-[new Date(2022,2,21,6,0,0),543.42]
+[new Date(2022,2,21,7,0,0),543.42],
+[new Date(2022,2,21,7,0,0),543.42]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -115,13 +116,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">543.4</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 07:00</td>
+<td id="latest-index">544</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 07:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">543.4</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 05:00</td>
+<td id="high-index">544</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 07:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
