--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -64,7 +64,8 @@ data.addRows([
 [new Date(2022,2,21,6,0,0),543.42],
 [new Date(2022,2,21,7,0,0),543.42],
 [new Date(2022,2,21,7,15,0),544.01],
-[new Date(2022,2,21,7,15,0),544.01]
+[new Date(2022,2,21,7,30,0),546.43],
+[new Date(2022,2,21,7,30,0),546.43]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -117,8 +118,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">546.4</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 07:30</td>
+<td id="latest-index">544</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 07:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
