--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -66,7 +66,8 @@ data.addRows([
 [new Date(2022,2,21,7,30,0),546.43],
 [new Date(2022,2,21,7,45,0),543.97],
 [new Date(2022,2,21,8,0,0),545.05],
-[new Date(2022,2,21,8,0,0),545.05]
+[new Date(2022,2,21,8,15,0),549.54],
+[new Date(2022,2,21,8,15,0),549.54]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -119,13 +120,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">549.5</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 08:15</td>
+<td id="latest-index">550.5</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 08:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">549.5</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 08:15</td>
+<td id="high-index">550.5</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 08:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
