--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -67,7 +67,8 @@ data.addRows([
 [new Date(2022,2,21,7,45,0),543.97],
 [new Date(2022,2,21,8,0,0),545.05],
 [new Date(2022,2,21,8,15,0),549.54],
-[new Date(2022,2,21,8,15,0),549.54]
+[new Date(2022,2,21,8,30,0),550.53],
+[new Date(2022,2,21,8,30,0),550.53]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -120,8 +121,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">550.5</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 08:30</td>
+<td id="latest-index">550.1</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 08:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
