--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -68,7 +68,8 @@ data.addRows([
 [new Date(2022,2,21,8,15,0),549.54],
 [new Date(2022,2,21,8,30,0),550.53],
 [new Date(2022,2,21,8,45,0),550.06],
-[new Date(2022,2,21,8,45,0),550.06]
+[new Date(2022,2,21,9,0,0),550.38],
+[new Date(2022,2,21,9,0,0),550.38]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -121,8 +122,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">550.4</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 09:00</td>
+<td id="latest-index">549.9</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 09:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
