--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -69,7 +69,8 @@ data.addRows([
 [new Date(2022,2,21,8,30,0),550.53],
 [new Date(2022,2,21,8,45,0),550.06],
 [new Date(2022,2,21,9,0,0),550.38],
-[new Date(2022,2,21,9,0,0),550.38]
+[new Date(2022,2,21,9,15,0),549.87],
+[new Date(2022,2,21,9,15,0),549.87]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -122,13 +123,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">549.9</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 09:15</td>
+<td id="latest-index">552.9</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 09:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">550.5</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 08:30</td>
+<td id="high-index">552.9</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 09:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
