--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -70,7 +70,8 @@ data.addRows([
 [new Date(2022,2,21,8,45,0),550.06],
 [new Date(2022,2,21,9,0,0),550.38],
 [new Date(2022,2,21,9,15,0),549.87],
-[new Date(2022,2,21,9,15,0),549.87]
+[new Date(2022,2,21,9,30,0),552.92],
+[new Date(2022,2,21,9,30,0),552.92]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -123,8 +124,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">552.9</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 09:30</td>
+<td id="latest-index">551.7</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 09:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
