--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -71,7 +71,8 @@ data.addRows([
 [new Date(2022,2,21,9,15,0),549.87],
 [new Date(2022,2,21,9,30,0),552.92],
 [new Date(2022,2,21,9,45,0),551.68],
-[new Date(2022,2,21,9,45,0),551.68]
+[new Date(2022,2,21,10,0,0),551.89],
+[new Date(2022,2,21,10,0,0),551.89]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -124,8 +125,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">551.9</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 10:00</td>
+<td id="latest-index">551.4</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 10:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
